apps/my-cool-kustomize-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-cool-kustomize-application
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: my-cool-kustomize-application
